# go-bazel-tutorial

./: README.md
example1/: README.md  WORKSPACE
example1/cmd/hello1/: BUILD  main.go
example1/cmd/hello2/: BUILD.bazel  main.go
example1/pkg/greeting/: BUILD.bazel  greeting.go
example2/: BUILD.bazel  README.md  WORKSPACE  go.mod
example2/cmd/server/: BUILD.bazel  server.go
example2/pkg/http/handlers/: BUILD.bazel
example2/pkg/http/middlewares/: BUILD.bazel  middlewares_test.go
example3/: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
example3/cmd/client/: BUILD.bazel  client.go
example3/cmd/server/: BUILD.bazel  server.go
example3/pkg/pb/: BUILD.bazel  helloworld.pb.go  helloworld.pb.gw.go  helloworld.proto
example3/pkg/svc/: BUILD.bazel  greeter.go  greeter_test.go
