load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/ceperapl/go-bazel-tutorial/example3/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/pb",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "example3_client_image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/client"],
    files = [":client"],
    repository = "pazdniakousiarhei",
)
