load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/ceperapl/go-bazel-tutorial/example3/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/pb",
        "//pkg/svc",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "example3_server_image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/server"],
    files = [":server"],
    repository = "pazdniakousiarhei",
)
